--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESP32 Data Receiver</title>
+  <title>ESP32 Duomenys</title>
 </head>
 <body>
-    <h1>Data from ESP32</h1>
-    <div id="data"></div>
+  <h1>Duomenys iš ESP32</h1>
+  <p>Temperatūra: <span id="temperature"></span>°C</p>
+  <p>Drėgmė: <span id="humidity"></span>%</p>
 
-    <script>
-        async function fetchData() {
-            const response = await fetch('http://your-server.com/api/data'); // Replace with your server URL
-            const data = await response.json();
-            document.getElementById('data').innerText = JSON.stringify(data);
-        }
+  <script>
+    async function getData() {
+        const response = await fetch('http://192.168.0.175/data');
+        const data = await response.json();
+        console.log(`Gauti duomenys: Temperatūra - ${data.temperature}, Drėgmė - ${data.humidity}`);
+    }
+    getData();
+</script>
+<script>
+  async function sendData() {
+      const response = await fetch('http://192.168.0.175/data', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ key: 'value' })
+      });
+      const result = await response.text();
+      console.log(`Serverio atsakymas: ${result}`);
+  }
+  sendData();
+</script>
 
-        setInterval(fetchData, 5000); // Fetch data every 5 seconds
-    </script>
+
 </body>
 </html>
